# duckd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  README.md  bench_concurrent.cpp  bench_connection.cpp  bench_prepared.cpp  bench_query.cpp  bench_scalability.cpp  bench_tpcb.cpp  bench_tpch.cpp  benchmark_common.hpp  pg_client.hpp  run_benchmarks.sh
contrib/: CMakeLists.txt
contrib/arrow-cmake/: CMakeLists.txt  patch_ep_policy.cmake  policy_fix.cmake
contrib/asio/: CMakeLists.txt
contrib/asio-cmake/: CMakeLists.txt
contrib/parallel-hashmap-cmake/: CMakeLists.txt
contrib/spdlog-cmake/: CMakeLists.txt
contrib/yaml-cpp-cmake/: CMakeLists.txt
docs/: examples.md
etc/: config.yaml.example  duckd.conf.example
programs/client/: CMakeLists.txt  main.cpp
programs/server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  common.hpp  version.hpp.in
src/client/: CMakeLists.txt
src/client/cli/: duckdb_remote_cli.cpp
src/client/duckd-client/: CMakeLists.txt  duckd_catalog.cpp  duckd_catalog.hpp  duckd_client_extension.cpp  flight_client.cpp  flight_client.hpp
src/client/remote-client/: remote_client.cpp  remote_client.hpp
src/config/: config_file.hpp  server_config.hpp  yaml_config.hpp
src/duckd/: CMakeLists.txt  common.hpp
src/duckd-client/: CMakeLists.txt
src/duckd-client/remote-client/: duckdb_remote.hpp  duckdb_remote_extension.cpp
src/duckd/executor/: executor_pool.cpp  executor_pool.hpp  query_executor.cpp
src/duckd/network/: io_context_pool.cpp  io_context_pool.hpp  tcp_connection.hpp  tcp_server.cpp
src/duckd/protocol/: message.cpp  message.hpp  message_builder.cpp  message_types.hpp  protocol_handler.cpp  protocol_handler.hpp
src/duckd/serialization/: arrow_serializer.cpp  arrow_serializer.hpp
src/duckd/session/: session_manager.hpp
src/executor/: executor_pool.cpp  executor_pool.hpp  query_executor.cpp  query_executor.hpp
src/http/: http_server.cpp  http_server.hpp
src/logging/: duckdb_log_storage.hpp  logger.cpp  logger.hpp
src/network/: io_context_pool.cpp  pg_connection.cpp  pg_connection.hpp  tcp_connection.cpp  tcp_server.cpp  tcp_server.hpp
src/protocol/: message_parser.cpp  protocol_handler.cpp
src/protocol/flight/: flight_arrow_bridge.hpp  flight_sql_server.cpp  flight_sql_server.hpp
src/protocol/pg/: pg_handler.cpp  pg_handler.hpp  pg_message_reader.hpp  pg_message_writer.hpp  pg_protocol.hpp  pg_types.hpp
src/serialization/: arrow_serializer.cpp
src/server/: CMakeLists.txt  README.md  build.sh  main.cpp
src/server/clients/python/: duckdb_client.py
src/server/executor/: executor_pool.cpp  query_executor.cpp
src/server/extension/duckdb_remote/: CMakeLists.txt  duckdb_remote_cli.cpp  duckdb_remote_extension.cpp  remote_client.cpp  test_extension.cpp
src/server/include/duckdb_server/: common.hpp
src/server/include/duckdb_server/executor/: executor_pool.hpp  query_executor.hpp
src/server/include/duckdb_server/network/: io_context_pool.hpp  tcp_connection.hpp  tcp_server.hpp
src/server/include/duckdb_server/protocol/: message.hpp  message_types.hpp  protocol_handler.hpp
src/server/include/duckdb_server/serialization/: arrow_serializer.hpp
src/server/include/duckdb_server/session/: session.hpp  session_manager.hpp
src/server/include/duckdb_server/utils/: logger.hpp
src/server/network/: io_context_pool.cpp  tcp_connection.cpp  tcp_server.cpp
src/server/protocol/: message.cpp  message_builder.cpp  message_parser.cpp  protocol_handler.cpp
src/server/serialization/: arrow_serializer.cpp
src/server/session/: session.cpp  session_manager.cpp
src/server/utils/: logger.cpp
src/session/: connection_pool.cpp  connection_pool.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp
src/storage/: block_allocator.cpp
src/utils/: logger.cpp  logger.hpp
tests/: CMakeLists.txt
tests/integration/: test_extension.cpp  test_extension.py
tests/integration/flight/: test_duckd_client.cpp  test_flight_sql.cpp
tests/integration/pg/: test_pg_integration.cpp
tests/unit/config/: test_server_config.cpp
tests/unit/executor/: test_executor_pool.cpp
tests/unit/logging/: test_logger.cpp
tests/unit/pg/: test_pg_message_reader.cpp  test_pg_message_writer.cpp  test_pg_protocol.cpp  test_pg_types.cpp
tests/unit/session/: test_connection_pool.cpp  test_session.cpp  test_session_manager.cpp
