# Apache Arrow Flight SQL configuration
# https://github.com/apache/arrow
# Version: 19.0.1
# License: Apache 2.0

set(ARROW_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../arrow/cpp")

# Fix for CMake >= 3.27: Arrow's bundled deps (gflags, c-ares) use old
# cmake_minimum_required versions. Patch ThirdpartyToolchain.cmake to add
# CMAKE_POLICY_VERSION_MINIMUM to ExternalProject cmake args.
if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.27")
    include(${CMAKE_CURRENT_SOURCE_DIR}/patch_ep_policy.cmake)
endif()

# Minimal Arrow build: only Flight SQL + bundled dependencies
set(ARROW_DEFINE_OPTIONS ON CACHE BOOL "" FORCE)
set(ARROW_FLIGHT ON CACHE BOOL "" FORCE)
set(ARROW_FLIGHT_SQL ON CACHE BOOL "" FORCE)
set(ARROW_IPC ON CACHE BOOL "" FORCE)

# Bundled dependencies (build gRPC/Protobuf/etc. from source)
set(ARROW_DEPENDENCY_SOURCE "BUNDLED" CACHE STRING "" FORCE)

# Static linking
set(ARROW_BUILD_STATIC ON CACHE BOOL "" FORCE)
set(ARROW_BUILD_SHARED OFF CACHE BOOL "" FORCE)

# Disable everything unnecessary
set(ARROW_COMPUTE OFF CACHE BOOL "" FORCE)
set(ARROW_CSV OFF CACHE BOOL "" FORCE)
set(ARROW_JSON OFF CACHE BOOL "" FORCE)
set(ARROW_PARQUET OFF CACHE BOOL "" FORCE)
set(ARROW_DATASET OFF CACHE BOOL "" FORCE)
set(ARROW_FILESYSTEM OFF CACHE BOOL "" FORCE)
set(ARROW_ACERO OFF CACHE BOOL "" FORCE)
set(ARROW_GANDIVA OFF CACHE BOOL "" FORCE)
set(ARROW_MIMALLOC OFF CACHE BOOL "" FORCE)
set(ARROW_JEMALLOC OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_RE2 OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_UTF8PROC OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_BROTLI OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_BZ2 OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_LZ4 OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_SNAPPY OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_ZLIB OFF CACHE BOOL "" FORCE)
set(ARROW_WITH_ZSTD OFF CACHE BOOL "" FORCE)
set(ARROW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ARROW_BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
set(ARROW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(ARROW_BUILD_UTILITIES OFF CACHE BOOL "" FORCE)
set(ARROW_BUILD_INTEGRATION OFF CACHE BOOL "" FORCE)
set(ARROW_INSTALL_NAME_RPATH OFF CACHE BOOL "" FORCE)
set(ARROW_TESTING OFF CACHE BOOL "" FORCE)
set(ARROW_ENABLE_TIMING_TESTS OFF CACHE BOOL "" FORCE)
set(ARROW_S3 OFF CACHE BOOL "" FORCE)
set(ARROW_GCS OFF CACHE BOOL "" FORCE)
set(ARROW_AZURE OFF CACHE BOOL "" FORCE)
set(ARROW_HDFS OFF CACHE BOOL "" FORCE)
set(ARROW_ORC OFF CACHE BOOL "" FORCE)
set(ARROW_SUBSTRAIT OFF CACHE BOOL "" FORCE)
set(ARROW_SKYHOOK OFF CACHE BOOL "" FORCE)

add_subdirectory("${ARROW_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/arrow")
